--- a/potch-huis/package.json
+++ b/potch-huis/package.json
@@ -1,5 +1,6 @@
 {
   "name": "potch-huis",
+  "homepage": "https://vanderMerwe99.github.io/potch-huis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-router-dom": "^6.4.0"
   }
 }
