--- a/potch-huis/package.json
+++ b/potch-huis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "potch-huis",
-  "homepage": "https://vanderMerwe99.github.io/potch-huis",
+  "homepage": "https://thinkBEERUS.github.io/potch-huis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
