--- a/potch-huis/package.json
+++ b/potch-huis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "potch-huis",
-  "homepage": "https://thinkbeerus.github.io/Potch-Huis/",
+  "homepage": "https://thinkbeerus.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-move": "^6.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
