--- a/potch-huis/package.json
+++ b/potch-huis/package.json
@@ -17,6 +17,7 @@
     "react-move": "^6.5.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
+    "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
