--- a/potch-huis/package.json
+++ b/potch-huis/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
     "d3-ease": "^3.0.1",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-move": "^6.5.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
